--- a/src/components/Persons/Person/Person.css
+++ b/src/components/Persons/Person/Person.css
@@ -1,9 +1,10 @@
 .Person {
     width: 60%;
+    color: #ffffff;
     margin: 16px auto;
     border: 1px solid #eeeeee;
     box-shadow: 0 2px 3px #cccccc;
     padding: 16px;
     text-align: center;
-    background: #fff;
+    background: #000000;
 }
